src/objects/Call_Log__c.object
<CustomObject>
    <fields>
        <fullName>Referred_to3__c</fullName>
        <label>Referred to:</label>
        <picklist>
            <picklistValues>
                <fullName>FLAC General Centre Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre General Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre Specialised Outside Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (LAB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Mediation (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MABS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barnardos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMREG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courts Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection Commissioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garda Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigrant Council of Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrant Rights Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Consumer Agenc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Beginnings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of the Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probate Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threshold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_to_FLAC_centre__c</fullName>
        <description>Please select any centre that you referred the callers to</description>
        <inlineHelpText>Please select any centre that you referred the callers to</inlineHelpText>
        <label>Referred to FLAC centre:</label>
        <picklist>
            <picklistValues>
                <fullName>Aungier Street</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balbriggan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballyboden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballyfermot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballymun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballymun Civic Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blanchardstown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clondalkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crumlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeafHear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundrum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dun Laoghaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finglas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malahide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath Street (SICCDA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath Street (Fam &amp; Emp)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North King Street</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northside Community Law Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&apos;Connell Street</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearse St</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prussia St</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raheny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rathmines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rialto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ringsend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sean McDermot Street</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Repeat_caller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat caller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_area_of_law__c</fullName>
        <label>Secondary area of law:</label>
        <picklist>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client-Solicitor relations/issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit &amp; Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing/Landlord &amp; Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration/refugee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negligence/Personal Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbour disputes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property/Interest in Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will/Probate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Call Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Date__c</columns>
        <columns>Primary_area_of_law__c</columns>
        <columns>Hightlight_Call__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Alltoday</fullName>
        <columns>NAME</columns>
        <columns>Hightlight_Call__c</columns>
        <columns>Name__c</columns>
        <columns>Date__c</columns>
        <columns>Primary_area_of_law__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Calls Today</label>
    </listViews>
    <listViews>
        <fullName>Highlighted_Calls</fullName>
        <columns>NAME</columns>
        <columns>Details_of_query__c</columns>
        <columns>Primary_area_of_law__c</columns>
        <columns>Secondary_area_of_law__c</columns>
        <columns>Referred_from__c</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hightlight_Call__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Highlighted Calls</label>
    </listViews>
    <listViews>
        <fullName>Highlighted_Calls_Today</fullName>
        <columns>NAME</columns>
        <columns>Details_of_query__c</columns>
        <columns>Primary_area_of_law__c</columns>
        <columns>Secondary_area_of_law__c</columns>
        <columns>Referred_from__c</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hightlight_Call__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Highlighted Calls Today</label>
    </listViews>
    <listViews>
        <fullName>Kildare_calls</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Primary_area_of_law__c</columns>
        <columns>Secondary_area_of_law__c</columns>
        <columns>Details_of_query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County__c</field>
            <operation>equals</operation>
            <value>Kildare</value>
        </filters>
        <label>Kildare calls</label>
    </listViews>
    <listViews>
        <fullName>Legal_Aid_as_Primary_Area</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Name__c</columns>
        <columns>Details_of_query__c</columns>
        <columns>Follow_up_needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_area_of_law__c</field>
            <operation>equals</operation>
            <value>Legal Aid</value>
        </filters>
        <label>Legal Aid as Primary Area</label>
    </listViews>
    <listViews>
        <fullName>Legal_Aid_as_Secondary_area</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Name__c</columns>
        <columns>Details_of_query__c</columns>
        <columns>Follow_up_needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Secondary_area_of_law__c</field>
            <operation>equals</operation>
            <value>Legal Aid</value>
        </filters>
        <label>Legal Aid as Secondary area</label>
    </listViews>
    <listViews>
        <fullName>Mayo_calls</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Primary_area_of_law__c</columns>
        <columns>Secondary_area_of_law__c</columns>
        <columns>Details_of_query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County__c</field>
            <operation>equals</operation>
            <value>Mayo</value>
        </filters>
        <label>Mayo calls</label>
    </listViews>
    <listViews>
        <fullName>Social_Welfare_Appeals</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Details_of_query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Breakdown_PA__c</field>
            <operation>equals</operation>
            <value>Social Welfare Appeals</value>
        </filters>
        <label>Social Welfare Appeals</label>
    </listViews>
    <listViews>
        <fullName>info</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_area_of_law__c</field>
            <operation>equals</operation>
            <value>Legal Aid</value>
        </filters>
        <filters>
            <field>Secondary_area_of_law__c</field>
            <operation>equals</operation>
            <value>Legal Aid</value>
        </filters>
        <label>info</label>
    </listViews>
    <listViews>
        <fullName>lay_litigants</fullName>
        <columns>NAME</columns>
        <columns>Primary_area_of_law__c</columns>
        <columns>Secondary_area_of_law__c</columns>
        <columns>Details_of_query__c</columns>
        <columns>County__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lay_Litigant__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>lay litigants</label>
    </listViews>
    <nameField>
        <displayFormat>Call-{0000}-{MM}-{YYYY}</displayFormat>
        <label>Call Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>